syntax = "proto3";

option go_package = "github.com/znkisoft/watchdog/schema";

import "models.proto";

message Pagination {
  int32 skip = 1;
  int32 limit = 2;
}

message ServerStatusRequest {
  string server_id = 1;
}

message PluginRequest {
  PluginType type = 1;
}
